# HM

./: .gitignore
fastapi_hm12/: main.py  pyproject.toml
fastapi_hm12/helper/: get_structure.py
fastapi_hm12/howto/: task.md
fastapi_hm12/migrations/: env.py
fastapi_hm12/migrations/versions/: 5e78c5744a51_change_lazy.py  73bc725653fe_init.py  a7f0b089e1d4_joineload.py
fastapi_hm12/src/: __init__.py
fastapi_hm12/src/config/: __init__.py  configurate.py  cors.py  get_logger.py
fastapi_hm12/src/database/: __init__.py  conection_postgres.py  connection_rabbit.py
fastapi_hm12/src/entity/: __init__.py  models.py
fastapi_hm12/src/middleware/: __init__.py  banned.py
fastapi_hm12/src/repository/: contacts.py  users.py
fastapi_hm12/src/routes/: autirisation.py  autorisation.py  contacts.py  users.py
fastapi_hm12/src/schemas/: __init__.py  validate_contact.py  validate_password.py  validate_token.py  validate_user.py
fastapi_hm12/src/services/: __init__.py  auth_service.py  basic.py  email_service.py  jwt_service.py  roles.py  user_service.py
fastapi_hm12/src/services/rabbitmq_servise/: f.py  produser.py  worker.py
fastapi_hm12/src/services/templates/: confirm_email.html  form_psw.html  psw_reset.html
fastapi_hm12/src/templates/: exemples.py
fastapi_hm12/tests/: __init__.py  conftest.py
fastapi_hm12/tests/test_e2e_auth/: __init__.py  test_e2e_auth.py
fastapi_hm12/tests/tests_connections/: __init__.py  test_connection_postgress.py  test_connection_rabbit_mq.py
fastapi_hm12/tests/tests_repositoty/: __init__.py  test_uni_users.py  test_unit_repository_contacts.py
hm10/: dd3.txt  pyproject.toml
hm10/crv/: db.sqlite3  planwork.md
hm10/crv/mysite/: settings.py  urls.py
hm10/crv/quotes/: models.py  urls.py  views.py
hm10/crv/quotes/migrations/: 0001_initial.py
hm10/crv/quotes/static/quotes/: main.css
hm10/crv/quotes/style/quotes/: main.css
hm10/crv/quotes/templates/quotes/: base.html  home.html  search_results.html
hm10/crv/user_room/: apps.py  urls.py  views.py
hm10/crv/user_room/templates/user_room/: register_login.html
hm10/crv/users/: apps.py  models.py  urls.py  views.py
hm10/crv/users/static/users/: script.js
hm10/crv/users/templates/users/: account.html  register_login.html
hm10/crv/utils/: __init__.py  config.ini  connect.py  fill_postgres_db.py  testing_connect.py
hm10/crv/utils/test_connection/: test_connect_p.py  testing_connect.py
hm10/hm/: manage.py
hm10/hm/home_work/: asgi.py  settings.py  urls.py  wsgi.py
hm10/hm/quotes/: urls.py  utils.py  views.py
hm10/hm/quotes/static/quotes/: main.css
hm10/hm/quotes/templates/quotes/: base.html  index.html  login.html
hm10/hm/quotes/templatetags/: extract.py
hm10/hm/users/: urls.py
hm10/hm/util/: add_quotes.py  config.ini  connect.py
hm10/myproject/myproject/: settings.py
hm10/mysite/mysite/: settings.py
hm11/: README.md  docker-compose.yml  main.py  pyproject.toml  simple_description.txt
hm11/RabbitMQService/: rabbitMQ_worker.py
hm11/migrations/: env.py
hm11/migrations/versions/: 02836b38eab0_upgrade_model_user.py  6bef1b799ed9_add_user_roles.py  739e79a9db43_update_models_contact_add_table_user_.py  9e09f2a57ee3_update_user_token_table.py  caf46c06e1f5_init.py
hm11/rabbit_mq_service/: mail_producer.py  mail_publisher.py  rabbitmq_worker.py
hm11/srv/conf/: config.ini  config.py  conn_rabbitMQ.py  cors_conf.py  loging_conf.py
hm11/srv/database/: db.py
hm11/srv/entity/: models.py
hm11/srv/repository/: contacts.py  users.py
hm11/srv/routes/: auth.py  check_open.py  contacts.py  reset_pass.py  users.py
hm11/srv/schemas/: contacts.py  user.py
hm11/srv/services/: auth.py  email.py  roles.py
hm11/srv/services/RabbitMQServis/: RMQ_produser.py
hm11/srv/services/templates/: reset_password_email.html  verify_email.html
hm11/srv/templates/: re_pass.html
hm_8/: .gitignore  dump.rdb  get_path.py  load_script.py  pyproject.toml  search.py
hm_8/configuration/: config.ini  conn_mongo.py  conn_redis.py  connect.py  models.py
hm_8/learn_redis_rabbitMQ/: ceching.py  connect.py  consumer.py  producer.py
hm_8/learn_redis_rabbitMQ/01_hello_world/: consumer.py  producer.py
hm_8/part_one/: check_connect.py  commands.py  dump.rdb  get_path.py  load_script.py  main.py  search.py
hm_8/part_one/configuration/: connect.py
hm_8/part_one/learn_cash/: check_connect.py  exemple_1.py
hm_8/part_two/: consumer_email.py  consumer_sms.py  producer.py
hm_8/part_two/config/: connect.py
hm_8/part_two/crv/: check_connect.py  create_contacts.py  models.py  sending.py
hm_9/: get_author.py  get_quotes.py  main.py  pyproject.toml  simple_reqw.py
hm_9/crv/: config.py  content_page.py  json_load.py  json_save.py  models.py
hm_9/crv/parsig/: parsing_element.py
hm_9/crv/parsing/: parsing_element.py
hm_9/save_image/: download_images.py
hm__7/: alembic.ini  check_connect.py  config.ini  config.py  create_table.py  extra_select.py  main.py  my_select.py  pyproject.toml  seed.py  tables.py  task.txt
hm__7/alembic/: env.py
hm__7/alembic/versions/: 6ce2673b891b_description_of_the_change.py  ab71ff761f29_starter_work.py  e526f6394ef5_load_tables.py
hm__7/cli/: README.md  base.py  grade_cli.py  group_cli.py  student_cli.py  subject_cli.py  teacher_cli.py
hm__7/config/: __init__.py  data_base.py
(+56 files in other folders)
