[tool.poetry]
name = "fast-hm12"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
pydantic-extra-types = "^2.10.1"
phonenumbers = "^8.13.52"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
bcrypt = "^4.2.1"
cryptography = "^44.0.0"
passlib = "^1.7.4"
pytz = "^2024.2"
jwt = "^1.3.1"
libgravatar = "^1.0.4"
python-jose = "^3.3.0"
aio-pika = "^9.5.3"
fastapi-mail = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest tests"