[tool.poetry]
name = "hm11"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-extra-types = "^2.10.0"
fastapi = "^0.115.5"
alembic = "^1.14.0"
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
phonenumbers = "^8.13.51"
python-multipart = "^0.0.19"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2024.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
