[tool.poetry]
name = "hm-8"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
mongoengine = "^0.29.1"
redis = "^5.2.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^30.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
